# serializer version: 1
# name: test_device_tracker_setup[device_tracker.device1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.device1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'device1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'device1',
    'platform': 'luci',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:BB:CC:DD:EE:FF',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.device1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'device1',
      'host_name': 'device1',
      'ip': '192.168.1.100',
      'mac': 'AA:BB:CC:DD:EE:FF',
      'source_type': <SourceType.ROUTER: 'router'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.device1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_tracker_setup[device_tracker.device2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.device2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'device2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'device2',
    'platform': 'luci',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '11:22:33:44:55:66',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.device2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'device2',
      'host_name': 'device2',
      'ip': '192.168.1.101',
      'mac': '11:22:33:44:55:66',
      'source_type': <SourceType.ROUTER: 'router'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.device2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
